[project]
name = "fps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dowhy>=0.14",
    "econml>=0.16.0",
    "flwr[simulation]>=1.26.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "torch>=2.10.0",
]
